Fix dark mode for galacticcruise + misc dark mode fixes + improve floating menu

--- a/src/css/dark_theme/general.less
+++ b/src/css/dark_theme/general.less
@@ -973,7 +973,7 @@ select.colorselector {
   color: #f0f0f0 !important;
 }
 
-.bga-game-filter-tags .arrow {
+.bga-horizontal-carousel__arrow {
   filter: invert(1) hue-rotate(150deg);
 }
 
