--- a/src/css/games/galacticcruise.less
+++ b/src/css/games/galacticcruise.less
@@ -111,4 +111,17 @@ html[data-theme=dark] {
 	.scoretable .header {
 		background-color: var(--dark-20);
 	}
+
+	#settings-controls-container-prefs:before,
+	.localsettings_header {
+		background-color: var(--orange-30);
+	}
+
+	#localsettings_restore span {
+		white-space: break-spaces;
+	}
+
+	#localsettings_restore {
+		margin: 8px;
+	}
 }
