--- a/src/css/games/terraformingmars.less
+++ b/src/css/games/terraformingmars.less
@@ -121,7 +121,7 @@ html[data-theme=dark] {
 		--plcolor: #ffc965;
 	}
 
-	a#localsettings_restore span {
+	#localsettings_restore span {
 		white-space: break-spaces;
 	}
 
